# vntrialmatch

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_app.py
results/: trial_matching_results.json
src/: __init__.py  settings.py
src/app/: __init__.py  app.py
src/config/: config.py
src/core/: __init__.py  pipeline.py
src/core/criterion_matching/: matcher.py
src/core/preprocess/: sql2es.py  sql2mongo.py
src/core/target_identification/: keyword_enrichment.py  keyword_extraction.py  patient_masking.py  search.py
src/criterion_matching/: matcher.py
src/eval/: __init__.py  search_evaluator.py
src/models/: __init__.py  schemas.py
src/preprocess/: sql2es.py  sql2mongo.py
src/target_identification/: keyword_enrichment.py  keyword_extraction.py  patient_masking.py  search.py
src/utils/: aact_utils.py  cache_manager.py  import_aact_data.sh  llm_utils.py  openai_utils.py  prompts.py
